--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-2": "^6.18.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.23.0",
     "extract-text-webpack-plugin": "^1.0.1",
