--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-route": "^1.6.1",
     "echarts": "^3.4.0",
     "jquery": "^3.1.1",
+    "ng-table": "^3.0.1",
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
